<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ImplicitActivity">

    <EditText
        android:id="@+id/ed_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lokasi_cari"/>

    <Button
        android:id="@+id/btn_lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_location"/>

    <EditText
        android:id="@+id/ed_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/open_website"/>

    <Button
        android:id="@+id/btn_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_websitee"/>

    <EditText
        android:id="@+id/ed_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"/>

    <EditText
        android:id="@+id/ed_notelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan No Telepon"/>

    <Button
        android:id="@+id/btn_notelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telfon"/>


    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/open_camera"/>

</LinearLayout>